created csvs for each facility type

--- a/notebooks/2-data-eda.ipynb
+++ b/notebooks/2-data-eda.ipynb
@@ -4,22 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: Exploratory Data Analysis (EDA) of the OCPR \n",
-    "format:\n",
-    "    html:\n",
-    "        code-fold: true\n",
-    "jupyter: python\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "We will examing basic features of the data for distributions, averages, and trends over time\n",
+    "# Expore Data Analysis (EDA) for OCPR\n",
     "\n",
     "### Data Overview:\n",
     "Explore basic features of data e.g. ranges, averages, and distributions.\n",
@@ -51,7 +36,6 @@
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
-    "import seaborn.objects as so\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "import scipy.stats as stats\n"
@@ -59,9 +43,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>park_name</th>\n",
+       "      <th>facility</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Groveland Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>campers</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Addison Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>campers</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Groveland Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>revenue</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Addison Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>revenue</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Springfield Oaks</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>revenue</td>\n",
+       "      <td>1184</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date         park_name    facility variable  value\n",
+       "0  2022-06-01    Groveland Oaks  campground  campers      9\n",
+       "1  2022-06-01      Addison Oaks  campground  campers     10\n",
+       "2  2022-06-01    Groveland Oaks  campground  revenue    108\n",
+       "3  2022-06-01      Addison Oaks  campground  revenue     80\n",
+       "4  2022-06-01  Springfield Oaks        golf  revenue   1184"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path_base = Path('../data/processed/')\n",
+    "\n",
+    "weather = pd.read_csv(file_path_base / 'weather.csv')\n",
+    "parks_data = pd.read_csv(file_path_base / 'parks-data-long.csv')\n",
+    "parks_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Golf Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>variable</th>\n",
+       "      <th>date</th>\n",
+       "      <th>park_name</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>rounds played</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Glen Oaks</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Springfield Oaks</td>\n",
+       "      <td>1184</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-06-02</td>\n",
+       "      <td>Glen Oaks</td>\n",
+       "      <td>1344</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-06-02</td>\n",
+       "      <td>Springfield Oaks</td>\n",
+       "      <td>1485</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-06-03</td>\n",
+       "      <td>Glen Oaks</td>\n",
+       "      <td>962</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "variable       date         park_name  revenue  rounds played\n",
+       "0        2022-06-01         Glen Oaks     1248             32\n",
+       "1        2022-06-01  Springfield Oaks     1184             37\n",
+       "2        2022-06-02         Glen Oaks     1344             42\n",
+       "3        2022-06-02  Springfield Oaks     1485             45\n",
+       "4        2022-06-03         Glen Oaks      962             26"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Helper function for properly pivoting data\n",
+    "    index = ['date', 'park_name']\n",
+    "    columns = 'variable'\n",
+    "    values = 'value'\n",
+    "    return (df\n",
+    "            .pivot(index=index, columns=columns, values=values)\n",
+    "            .reset_index()\n",
+    "            .assign(date=lambda x: pd.to_datetime(x['date']))\n",
+    "    )\n",
+    "\n",
+    "golf = pivot(parks_data[parks_data['facility'] == 'golf'])\n",
+    "golf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(golf\u001b[38;5;241m.\u001b[39mdescribe()\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mx\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m0.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(golf.describe().apply(f\"{x:0.3f}\".format))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table border=\"1\" class=\"dataframe\">\n",
+    "  <thead>\n",
+    "    <tr style=\"text-align: right;\">\n",
+    "      <th>variable</th>\n",
+    "      <th>date</th>\n",
+    "      <th>revenue</th>\n",
+    "      <th>rounds played</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <th>count</th>\n",
+    "      <td>552</td>\n",
+    "      <td>552.000000</td>\n",
+    "      <td>552.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>mean</th>\n",
+    "      <td>2023-07-16 20:00:00</td>\n",
+    "      <td>1105.789855</td>\n",
+    "      <td>31.574275</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>min</th>\n",
+    "      <td>2022-06-01 00:00:00</td>\n",
+    "      <td>600.000000</td>\n",
+    "      <td>20.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>25%</th>\n",
+    "      <td>2022-08-08 18:00:00</td>\n",
+    "      <td>900.000000</td>\n",
+    "      <td>26.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>50%</th>\n",
+    "      <td>2023-07-16 12:00:00</td>\n",
+    "      <td>1088.000000</td>\n",
+    "      <td>32.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>75%</th>\n",
+    "      <td>2024-06-23 06:00:00</td>\n",
+    "      <td>1287.000000</td>\n",
+    "      <td>36.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>max</th>\n",
+    "      <td>2024-08-31 00:00:00</td>\n",
+    "      <td>1950.000000</td>\n",
+    "      <td>50.000000</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>std</th>\n",
+    "      <td>NaN</td>\n",
+    "      <td>258.532090</td>\n",
+    "      <td>6.882862</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
