Working on normalizing data schema

--- a/notebooks/1-data-cleaning.ipynb
+++ b/notebooks/1-data-cleaning.ipynb
@@ -778,14 +778,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save processed data to processed data directory\n",
-    "parks_data_long.to_csv(processed_data_path / 'parks_data_long.csv', index=False)\n",
-    "parks_data_pivot.to_csv(processed_data_path / 'parks_data_pivot.csv', index=False)\n",
+    "parks_data_long.to_csv(processed_data_path / 'parks-data-long.csv', index=False)\n",
+    "parks_data_pivot.to_csv(processed_data_path / 'parks-data-pivot.csv', index=False)\n",
     "weather.to_csv(processed_data_path / 'weather.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parks_"
    ]
   }
  ],
