Added significance level

--- a/notebooks/3-weather-analysis.ipynb
+++ b/notebooks/3-weather-analysis.ipynb
@@ -8,14 +8,16 @@
     "\n",
     "Quick analysis of effects of precipitation and temperature on revenu for golf courses, waterparks, and campgrounds.\n",
     "\n",
-    "Overall conclusion is that temperature and precipiation do have a *statistically significant* effect on revenue. However the models constructed have small R^2 values of 0.13 or less. Meaning that for all facilities our daily weather variables explain 13% or less of the variation in daily revenue. Estimated average effects of weather on daily revenue was much smaller for campgrounds than either golf courses or waterparks. This makes intuitive sense as campgrounds visitors are likely to be more committed to a multiday plan and less likely to cancel due to weather, whereas golf courses and waterparks are more likely to have visitors cancel their daily plans based on the weather. \n",
+    "Overall conclusion is that at a significance level of 0.05, temperature and precipiation do have a *statistically significant* effect on revenue for all facility types.\n",
+    "\n",
+    "However, the models constructed have small R^2 values of 0.13 or less. For all facility types our daily weather variables explain 13% or less of the variation in daily revenue. Estimated average effects of weather on daily revenue was much smaller for campgrounds than either golf courses or waterparks. This makes intuitive sense as campgrounds visitors are likely to be more committed to a multiday plan and less likely to cancel due to weather, whereas golf courses and waterparks are more likely to have visitors cancel their daily plans based on the weather. \n",
     "\n",
     "Further analysis of this dataset would involve looking for lagged effects of weather on revenue to see if there is a stronger explanatory effect of previous days weather or even the moving average of previous days' weather."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +148,7 @@
        "8      6  2022  Wednesday  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.125\n",
       "Method:                 Least Squares   F-statistic:                     40.18\n",
       "Date:                Thu, 25 Apr 2024   Prob (F-statistic):           5.16e-17\n",
-      "Time:                        00:13:48   Log-Likelihood:                -3811.4\n",
+      "Time:                        09:24:44   Log-Likelihood:                -3811.4\n",
       "No. Observations:                 552   AIC:                             7629.\n",
       "Df Residuals:                     549   BIC:                             7642.\n",
       "Df Model:                           2                                         \n",
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.115\n",
       "Method:                 Least Squares   F-statistic:                     36.88\n",
       "Date:                Thu, 25 Apr 2024   Prob (F-statistic):           9.41e-16\n",
-      "Time:                        00:13:48   Log-Likelihood:                -2865.8\n",
+      "Time:                        09:24:44   Log-Likelihood:                -2865.8\n",
       "No. Observations:                 552   AIC:                             5738.\n",
       "Df Residuals:                     549   BIC:                             5750.\n",
       "Df Model:                           2                                         \n",
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.060\n",
       "Method:                 Least Squares   F-statistic:                     18.73\n",
       "Date:                Thu, 25 Apr 2024   Prob (F-statistic):           1.35e-08\n",
-      "Time:                        00:13:49   Log-Likelihood:                -3973.9\n",
+      "Time:                        09:24:44   Log-Likelihood:                -3973.9\n",
       "No. Observations:                 552   AIC:                             7954.\n",
       "Df Residuals:                     549   BIC:                             7967.\n",
       "Df Model:                           2                                         \n",
@@ -348,10 +350,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>park_name</th>\n",
+       "      <th>facility</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>temp_f</th>\n",
+       "      <th>precip_in</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Groveland Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>108</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Addison Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Springfield Oaks</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>1184</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Glen Oaks</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-06-01</td>\n",
+       "      <td>Red Oaks</td>\n",
+       "      <td>waterpark</td>\n",
+       "      <td>402</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3303</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>Addison Oaks</td>\n",
+       "      <td>campground</td>\n",
+       "      <td>143</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3304</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>Springfield Oaks</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>880</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3305</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>Glen Oaks</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>1147</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3308</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>Red Oaks</td>\n",
+       "      <td>waterpark</td>\n",
+       "      <td>1280</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3309</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>Waterford Oaks</td>\n",
+       "      <td>waterpark</td>\n",
+       "      <td>501</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1656 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date         park_name    facility  revenue  temp_f  precip_in  \\\n",
+       "2     2022-06-01    Groveland Oaks  campground      108      75       0.42   \n",
+       "3     2022-06-01      Addison Oaks  campground       80      75       0.42   \n",
+       "4     2022-06-01  Springfield Oaks        golf     1184      75       0.42   \n",
+       "5     2022-06-01         Glen Oaks        golf     1248      75       0.42   \n",
+       "8     2022-06-01          Red Oaks   waterpark      402      75       0.42   \n",
+       "...          ...               ...         ...      ...     ...        ...   \n",
+       "3303  2024-08-31      Addison Oaks  campground      143      65       0.18   \n",
+       "3304  2024-08-31  Springfield Oaks        golf      880      65       0.18   \n",
+       "3305  2024-08-31         Glen Oaks        golf     1147      65       0.18   \n",
+       "3308  2024-08-31          Red Oaks   waterpark     1280      65       0.18   \n",
+       "3309  2024-08-31    Waterford Oaks   waterpark      501      65       0.18   \n",
+       "\n",
+       "     month  year    weekday  \n",
+       "2        6  2022  Wednesday  \n",
+       "3        6  2022  Wednesday  \n",
+       "4        6  2022  Wednesday  \n",
+       "5        6  2022  Wednesday  \n",
+       "8        6  2022  Wednesday  \n",
+       "...    ...   ...        ...  \n",
+       "3303     8  2024   Saturday  \n",
+       "3304     8  2024   Saturday  \n",
+       "3305     8  2024   Saturday  \n",
+       "3308     8  2024   Saturday  \n",
+       "3309     8  2024   Saturday  \n",
+       "\n",
+       "[1656 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
